# jerry-bq

./: README.md  pyproject.toml
dags/: wiki_bq_load.py  wiki_meta.py
